🎉 New Source: todoist (#20046)
* add new source: todoist

* source todoist: add docs

* source todoist: add docs

* source todoist: adjust some schemas

* refactor code

* fix flake

* add icon and seed source def

* fix read records

* change to connector acccpetance test

* add strictness test level

* update gradle

* auto-bump connector version

---------

Co-authored-by: Blah <sajarindider@gmail.com>
Co-authored-by: marcosmarxm <marcosmarxm@gmail.com>
Co-authored-by: Marcos Marx <marcosmarxm@users.noreply.github.com>
Co-authored-by: Octavia Squidington III <octavia-squidington-iii@users.noreply.github.com>

--- a/airbyte-config/init/src/main/resources/seed/source_definitions.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_definitions.yaml
@@ -2056,6 +2056,14 @@
   icon: tmdb.svg
   sourceType: api
   releaseStage: alpha
+- name: Todoist
+  sourceDefinitionId: 7d272065-c316-4c04-a433-cd4ee143f83e
+  dockerRepository: airbyte/source-todoist
+  dockerImageTag: 0.1.0
+  documentationUrl: https://docs.airbyte.com/integrations/sources/todoist
+  sourceType: api
+  icon: todoist.svg
+  releaseStage: alpha
 - name: Toggl
   sourceDefinitionId: 7e7c844f-2300-4342-b7d3-6dd7992593cd
   dockerRepository: airbyte/source-toggl
