--- a/.github/workflows/connector_nightly_builds_dagger.yml
+++ b/.github/workflows/connector_nightly_builds_dagger.yml
@@ -14,6 +14,8 @@ on:
         default: --concurrency=5 --release-stage=generally_available --release-stage=beta
         required: true
 
+run-name: Test connectors ${{ inputs.test-connectors-options }}
+
 jobs:
   test_connectors:
     name: Test connectors ${{ inputs.test-connectors-options }}
