--- a/.github/workflows/connector_nightly_builds_dagger.yml
+++ b/.github/workflows/connector_nightly_builds_dagger.yml
@@ -14,11 +14,11 @@ on:
         default: --concurrency=5 --release-stage=generally_available --release-stage=beta
         required: true
 
-run-name: Test connectors ${{ inputs.test-connectors-options }}
+run-name: Test connectors ${{ inputs.test-connectors-options || 'Nightly builds GA and Beta connectors' }}
 
 jobs:
   test_connectors:
-    name: Test connectors ${{ inputs.test-connectors-options }}
+    name: Test connectors ${{ inputs.test-connectors-options || 'Nightly builds GA and Beta connectors' }}
     timeout-minutes: 360 # 6 hours
     runs-on: ${{ inputs.runs-on || 'large-runner' }}
     steps:
