--- a/.github/workflows/connector_nightly_builds_dagger.yml
+++ b/.github/workflows/connector_nightly_builds_dagger.yml
@@ -5,12 +5,22 @@ on:
     # 11AM UTC is 12AM CET, 4AM PST.
     - cron: "0 11 * * *"
   workflow_dispatch:
+    inputs:
+      runs-on:
+        type: string
+        default: large-runner
+        required: true
+      test-connectors-options:
+        default: --concurrency=5 --release-stage=generally_available --release-stage=beta
+        required: true
+
+run-name: Test connectors ${{ inputs.test-connectors-options || 'Nightly builds GA and Beta connectors' }}
 
 jobs:
-  connectors_ci:
-    name: Connectors CI
-    timeout-minutes: 240 # 4 hours
-    runs-on: large-runner
+  test_connectors:
+    name: Test connectors ${{ inputs.test-connectors-options || 'Nightly builds GA and Beta connectors' }}
+    timeout-minutes: 360 # 6 hours
+    runs-on: ${{ inputs.runs-on || 'large-runner' }}
     steps:
       - name: Get start timestamp
         id: get-start-timestamp
@@ -31,7 +41,7 @@ jobs:
           python-version: "3.10"
       - name: Install ci-connector-ops package
         run: pip install ./tools/ci_connector_ops\[pipelines]\
-      - name: Run nightly builds
+      - name: Test connectors
         run: |
           export _EXPERIMENTAL_DAGGER_RUNNER_HOST="unix:///var/run/buildkit/buildkitd.sock"
           DAGGER_CLI_COMMIT="67c7e7635cf4ea0e446e2fed522a3e314c960f6a"
@@ -41,7 +51,7 @@ jobs:
               mkdir -p "$DAGGER_TMP_BINDIR"
               curl "https://dl.dagger.io/dagger/main/${DAGGER_CLI_COMMIT}/dagger_${DAGGER_CLI_COMMIT}_$(uname -s | tr A-Z a-z)_$(uname -m | sed s/x86_64/amd64/).tar.gz" | tar xvz -C "$DAGGER_TMP_BINDIR"
           fi
-          connectors-ci --is-ci --gha-workflow-run-id=${{ github.run_id }} test-connectors --release-stage=beta --release-stage=generally_available
+          connectors-ci --is-ci --gha-workflow-run-id=${{ github.run_id }} test-connectors ${{ inputs.test-connectors-options || '--concurrency=5 --release-stage=generally_available --release-stage=beta' }}
         env:
           GCP_GSM_CREDENTIALS: ${{ secrets.GCP_GSM_CREDENTIALS }}
           AWS_ACCESS_KEY_ID: ${{ secrets.STATUS_API_AWS_ACCESS_KEY_ID }}
