--- a/airbyte-integrations/connectors/source-everhour/source_everhour/everhour.yaml
+++ b/airbyte-integrations/connectors/source-everhour/source_everhour/everhour.yaml
@@ -1,9 +1,11 @@
-version: "0.1.0"
+version: "0.30.0"
 
 definitions:
   selector:
+    type: RecordSelector
     extractor:
-      field_pointer: []
+      type: DpathExtractor
+      field_path: []
   requester:
     url_base: "https://api.everhour.com"
     http_method: "GET"
@@ -13,76 +15,76 @@ definitions:
       api_token: "{{ config['api_key'] }}"
   retriever:
     record_selector:
-      $ref: "*ref(definitions.selector)"
+      $ref: "#/definitions/selector"
     paginator:
       type: NoPagination
     requester:
-      $ref: "*ref(definitions.requester)"
+      $ref: "#/definitions/requester"
   base_stream:
     retriever:
-      $ref: "*ref(definitions.retriever)"
+      $ref: "#/definitions/retriever"
   projects_stream:
-    $ref: "*ref(definitions.base_stream)"
-    $options:
+    $ref: "#/definitions/base_stream"
+    $parameters:
       name: "projects"
       primary_key: "id"
       path: "/projects"
   tasks_stream:
-    $options:
+    $parameters:
       name: "tasks"
     primary_key: "id"
     retriever:
-      $ref: "*ref(definitions.retriever)"
+      $ref: "#/definitions/retriever"
       requester:
-        $ref: "*ref(definitions.requester)"
+        $ref: "#/definitions/requester"
         path: "projects/{{ stream_slice.parent_id }}/tasks"
-      stream_slicer:
-        type: SubstreamSlicer
+      partition_router:
+        type: SubstreamPartitionRouter
         parent_stream_configs:
-          - stream: "*ref(definitions.projects_stream)"
+          - stream: "#/definitions/projects_stream"
             parent_key: "id"
-            stream_slice_field: "parent_id"
+            partition_field: "parent_id"
   time_records_stream:
-    $options:
+    $parameters:
       name: "time_records"
     primary_key: "id"
     retriever:
-      $ref: "*ref(definitions.retriever)"
+      $ref: "#/definitions/retriever"
       requester:
-        $ref: "*ref(definitions.requester)"
+        $ref: "#/definitions/requester"
         path: "projects/{{ stream_slice.parent_id }}/time"
-      stream_slicer:
-        type: SubstreamSlicer
+      partition_router:
+        type: SubstreamPartitionRouter
         parent_stream_configs:
-          - stream: "*ref(definitions.projects_stream)"
+          - stream: "#/definitions/projects_stream"
             parent_key: "id"
-            stream_slice_field: "parent_id"
+            partition_field: "parent_id"
   clients_stream:
-    $ref: "*ref(definitions.base_stream)"
-    $options:
+    $ref: "#/definitions/base_stream"
+    $parameters:
       name: "clients"
       primary_key: "id"
       path: "/clients"
   time_stream:
-    $ref: "*ref(definitions.base_stream)"
-    $options:
+    $ref: "#/definitions/base_stream"
+    $parameters:
       name: "time"
       primary_key: "id"
       path: "/team/time"
   users_stream:
-    $ref: "*ref(definitions.base_stream)"
-    $options:
+    $ref: "#/definitions/base_stream"
+    $parameters:
       name: "users"
       primary_key: "id"
       path: "/team/users"
 
 streams:
-  - "*ref(definitions.projects_stream)"
-  - "*ref(definitions.clients_stream)"
-  - "*ref(definitions.time_stream)"
-  - "*ref(definitions.users_stream)"
-  - "*ref(definitions.tasks_stream)"
-  - "*ref(definitions.time_records_stream)"
+  - "#/definitions/projects_stream"
+  - "#/definitions/clients_stream"
+  - "#/definitions/time_stream"
+  - "#/definitions/users_stream"
+  - "#/definitions/tasks_stream"
+  - "#/definitions/time_records_stream"
 
 check:
   stream_names:
