--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -14768,11 +14768,11 @@
               path_in_connector_config:
               - "credentials"
               - "client_secret"
-- dockerImage: "airbyte/source-strava:0.1.3"
+- dockerImage: "airbyte/source-strava:0.1.4"
   spec:
     documentationUrl: "https://docs.airbyte.com/integrations/sources/strava"
     connectionSpecification:
-      $schema: "http://json-schema.org/draft-07/schema#"
+      $schema: "https://json-schema.org/draft-07/schema#"
       title: "Strava Spec"
       type: "object"
       required:
@@ -14828,7 +14828,8 @@
           description: "UTC date and time. Any data before this date will not be replicated."
           title: "Start Date"
           examples:
-          - "2016-12-31 23:59:59"
+          - "2021-03-01T00:00:00Z"
+          format: "date-time"
           order: 4
     supportsNormalization: false
     supportsDBT: false
