--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -3789,6 +3789,25 @@
     supportsNormalization: false
     supportsDBT: false
     supported_destination_sync_modes: []
+- dockerImage: "airbyte/source-everhour:0.1.0"
+  spec:
+    documentationUrl: "https://docs.airbyte.io/integrations/sources/everhour"
+    connectionSpecification:
+      title: "Everhour Spec"
+      type: "object"
+      required:
+      - "api_key"
+      additionalProperties: true
+      properties:
+        api_key:
+          type: "string"
+          title: "API Key"
+          description: "Everhour API Key. See the <a href=\"https://everhour.docs.apiary.io/#introduction/authentication\"\
+            >docs</a> for information on how to generate this key."
+          airbyte_secret: true
+    supportsNormalization: false
+    supportsDBT: false
+    supported_destination_sync_modes: []
 - dockerImage: "airbyte/source-facebook-marketing:0.3.0"
   spec:
     documentationUrl: "https://docs.airbyte.com/integrations/sources/facebook-marketing"
