--- a/airbyte-config/init/src/main/resources/seed/source_definitions.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_definitions.yaml
@@ -539,6 +539,17 @@
     hosts:
       - "${subdomain}.apilayer.com"
       - apilayer.com
+- name: Everhour
+  sourceDefinitionId: 6babfc42-c734-4ef6-a817-6eca15f0f9b7
+  dockerRepository: airbyte/source-everhour
+  dockerImageTag: 0.1.0
+  documentationUrl: https://docs.airbyte.com/integrations/sources/everhour
+  icon: everhour.svg
+  sourceType: api
+  releaseStage: alpha
+  allowedHosts:
+    hosts:
+      - api.everhour.com
 - name: Facebook Marketing
   sourceDefinitionId: e7778cfc-e97c-4458-9ecb-b4f2bba8946c
   dockerRepository: airbyte/source-facebook-marketing
