--- a/airbyte-integrations/connectors/source-strava/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-strava/acceptance-test-config.yml
@@ -20,6 +20,7 @@ acceptance_tests:
       - config_path: "secrets/config.json"
         expect_records:
           path: "integration_tests/expected_records.jsonl"
+        fail_on_extra_columns: false
   incremental:
     tests:
       - config_path: "secrets/config.json"
