--- a/airbyte-ci/connectors/metadata_service/lib/tests/fixtures/invalid/metadata_catalog_no_type_override.yaml
+++ b/airbyte-ci/connectors/metadata_service/lib/tests/fixtures/invalid/metadata_catalog_no_type_override.yaml
@@ -7,7 +7,7 @@ data:
   githubIssueLabel: source-alloydb-strict-encrypt
   dockerImageTag: 2.0.1
   supportUrl: https://docs.airbyte.com/integrations/sources/alloydb
-  sourceType: database
+  connectionType: database
   releaseStage: generally_available
   license: MIT
   allowedHosts:
