--- a/airbyte-ci/connectors/metadata_service/orchestrator/pyproject.toml
+++ b/airbyte-ci/connectors/metadata_service/orchestrator/pyproject.toml
@@ -18,6 +18,7 @@ pygithub = "^1.58.0"
 metadata-service = {path = "../lib", develop = true}
 deepdiff = "^6.3.0"
 mergedeep = "^1.3.4"
+pydash = "^6.0.2"
 
 
 [tool.poetry.group.dev.dependencies]
