--- a/airbyte-config/init/src/main/resources/seed/source_definitions.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_definitions.yaml
@@ -798,7 +798,7 @@
   documentationUrl: https://docs.airbyte.com/integrations/sources/google-analytics-data-api
   icon: google-analytics.svg
   sourceType: api
-  releaseStage: beta
+  releaseStage: generally_available
   allowedHosts:
     hosts:
       - oauth2.googleapis.com
