dont fail on extra cols

--- a/airbyte-integrations/connectors/source-stripe/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-stripe/acceptance-test-config.yml
@@ -36,6 +36,7 @@ acceptance_tests:
           extra_fields: no
           exact_order: no
           extra_records: yes
+        fail_on_extra_columns: false
         ignored_fields:
           invoices:
             - name: invoice_pdf
