Add bypass for extra fields test

--- a/airbyte-integrations/connectors/source-sentry/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-sentry/acceptance-test-config.yml
@@ -17,10 +17,11 @@ acceptance_tests:
         - name: plugins/*/features
           bypass_reason: "Order features return randomly"
         projects:
-          - name: features
-            bypass_reason: "Order features return randomly"
-          - name: organization/features
-            bypass_reason: "Order features return randomly"
+        - name: features
+          bypass_reason: "Order features return randomly"
+        - name: organization/features
+          bypass_reason: "Order features return randomly"
+      fail_on_extra_columns: false
   connection:
     tests:
     - config_path: secrets/config.json
