--- a/airbyte-config/init/src/main/resources/seed/destination_definitions.yaml
+++ b/airbyte-config/init/src/main/resources/seed/destination_definitions.yaml
@@ -68,7 +68,7 @@
   destinationDefinitionId: ce0d828e-1dc4-496c-b122-2da42e637e48
   dockerRepository: airbyte/destination-clickhouse
   dockerImageTag: 0.1.12
-  documentationUrl: https://docs.airbyte.io/integrations/destinations/clickhouse
+  documentationUrl: https://docs.daspire.com/setup-guide/destinations/clickhouse
   releaseStage: alpha
 - name: Databricks Lakehouse
   destinationDefinitionId: 072d5540-f236-4294-ba7c-ade8fd918496
