--- a/airbyte-config/init/src/main/resources/seed/destination_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/destination_specs.yaml
@@ -799,7 +799,7 @@
     - "append"
 - dockerImage: "airbyte/destination-clickhouse:0.1.12"
   spec:
-    documentationUrl: "https://docs.airbyte.io/integrations/destinations/clickhouse"
+    documentationUrl: "https://docs.daspire.com/setup-guide/destinations/clickhouse"
     connectionSpecification:
       $schema: "http://json-schema.org/draft-07/schema#"
       title: "ClickHouse Destination Spec"
