--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -1630,7 +1630,7 @@
     supported_destination_sync_modes: []
 - dockerImage: "airbyte/source-clickhouse:0.1.13"
   spec:
-    documentationUrl: "https://docs.airbyte.io/integrations/destinations/clickhouse"
+    documentationUrl: "https://docs.daspire.com/setup-guide/destinations/clickhouse"
     connectionSpecification:
       $schema: "http://json-schema.org/draft-07/schema#"
       title: "ClickHouse Source Spec"
