auto-bump connector version

--- a/airbyte-config/init/src/main/resources/seed/destination_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/destination_specs.yaml
@@ -630,7 +630,7 @@
     supported_destination_sync_modes:
     - "overwrite"
     - "append"
-- dockerImage: "airbyte/destination-bigquery:1.2.17"
+- dockerImage: "airbyte/destination-bigquery:1.2.18"
   spec:
     documentationUrl: "https://docs.airbyte.com/integrations/destinations/bigquery"
     connectionSpecification:
@@ -802,6 +802,7 @@
           title: "Service Account Key JSON (Required for cloud, optional for open-source)"
           airbyte_secret: true
           order: 4
+          always_show: true
         transformation_priority:
           type: "string"
           description: "Interactive run type means that the query is executed as soon\
