--- a/airbyte-integrations/connectors/source-postgres-strict-encrypt/build.gradle
+++ b/airbyte-integrations/connectors/source-postgres-strict-encrypt/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 
     testImplementation testFixtures(project(':airbyte-integrations:connectors:source-jdbc'))
     testImplementation project(':airbyte-test-utils')
-
+    testImplementation libs.junit.jupiter.system.stubs
     testImplementation libs.connectors.testcontainers.postgresql
 
     integrationTestJavaImplementation project(':airbyte-integrations:bases:standard-source-test')
