--- a/airbyte-integrations/connectors/source-github/source_github/schemas/projects.json
+++ b/airbyte-integrations/connectors/source-github/source_github/schemas/projects.json
@@ -3,7 +3,7 @@
   "type": "object",
   "properties": {
     "repository": {
-      "type": ["string"]
+      "type": "string"
     },
     "owner_url": {
       "type": ["null", "string"]
