--- a/.github/workflows/test-connector-performance-command.yml
+++ b/.github/workflows/test-connector-performance-command.yml
@@ -68,7 +68,7 @@ jobs:
         with:
           comment-id: ${{ github.event.inputs.comment-id }}
           body: |
-            - **Note**: The following `dataset=` values are supported: `1m`, `10m`, `20m`, `bottleneck_stream1`
+            #### Note: The following `dataset=` values are supported: `1m`, `10m`, `20m`, `bottleneck_stream1`
             > :runner: ${{github.event.inputs.connector}} https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
       - name: Search for valid connector name format
         id: regex
@@ -154,7 +154,7 @@ jobs:
           # RUN_RESULT=$(kubectl logs --tail=5 $POD 2>&1)
           EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
           echo "RUN_RESULT<<$EOF" >> $GITHUB_OUTPUT
-          kubectl logs --tail=5 $POD | while read line ; do echo $line >> $GITHUB_OUTPUT ; done 
+          kubectl logs --tail=1 $POD | while read line ; do echo $line >> $GITHUB_OUTPUT ; done 
           echo "$EOF" >> $GITHUB_OUTPUT
       - name: Link comment to workflow run
         uses: peter-evans/create-or-update-comment@v2
@@ -166,7 +166,6 @@ jobs:
             ```
             ${{ steps.run-harness.outputs.RUN_RESULT }}
             ```
-            ### This run was XX% faster:rocket: than baseline on `master`.
       # need to add credentials here
   # In case of self-hosted EC2 errors, remove this block.
   stop-test-runner:
