--- a/.github/workflows/test-connector-performance-command.yml
+++ b/.github/workflows/test-connector-performance-command.yml
@@ -152,9 +152,12 @@ jobs:
           echo "reading end of log"
           kubectl logs --tail=5 $POD
           # RUN_RESULT=$(kubectl logs --tail=5 $POD 2>&1)
+          prefix='"LOG","log":{"level":"INFO","message":"INFO i.a.i.p.PerformanceTest(runTest):165'
+          suffix='"}}'
           EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
           echo "RUN_RESULT<<$EOF" >> $GITHUB_OUTPUT
-          kubectl logs --tail=1 $POD | while read line ; do echo $line >> $GITHUB_OUTPUT ; done 
+          #
+          kubectl logs --tail=1 $POD | while read line ; do line=${line#"$prefix"}; echo $line >> $GITHUB_OUTPUT ; done 
           echo "$EOF" >> $GITHUB_OUTPUT
       - name: Link comment to workflow run
         uses: peter-evans/create-or-update-comment@v2
