--- a/.github/workflows/connector-performance-command.yml
+++ b/.github/workflows/connector-performance-command.yml
@@ -1,4 +1,4 @@
-name: Test Connector Performance
+name: Connector Performance Harness
 on:
   workflow_dispatch:
     inputs:
@@ -30,4 +30,4 @@ jobs:
   Stub:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Test Connector Performance stub"
+      - run: echo "Connector Performance harness stub"
