--- a/tools/ci_connector_ops/ci_connector_ops/pipelines/resources/ci_gradle.properties
+++ b/tools/ci_connector_ops/ci_connector_ops/pipelines/resources/ci_gradle.properties
@@ -5,3 +5,4 @@ org.gradle.jvmargs=-Xmx8g -Xss4m \
 --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
 --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
 org.gradle.vfs.watch=false
+org.gradle.parallel=true
