Fix close com, fecebook marketing, freshsales, greenhouse expected records

--- a/airbyte-integrations/connectors/source-greenhouse/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-greenhouse/acceptance-test-config.yml
@@ -22,6 +22,10 @@ acceptance_tests:
       expect_records:
         path: "integration_tests/expected_records.jsonl"
       fail_on_extra_columns: false
+      ignored_fields:
+        users:
+          - name: updated_at
+            bypass_reason: "Updated when you login to account"
   full_refresh:
     tests:
     - config_path: "secrets/config.json"
