Destination Snowflake: Verify hostname via regex in spec (#24615)
* Revert "1705 p0 revert regex (#24405)"

This reverts commit 59c842ec428eccf9dcc2c675973504e2ba767810.

* fix regex + update tests

* version bump + changelog

* fix changelog

* auto-bump connector version

---------

Co-authored-by: Octavia Squidington III <octavia-squidington-iii@users.noreply.github.com>

--- a/airbyte-config/init/src/main/resources/seed/destination_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/destination_specs.yaml
@@ -6311,7 +6311,7 @@
     supported_destination_sync_modes:
     - "overwrite"
     - "append"
-- dockerImage: "airbyte/destination-snowflake:0.4.57"
+- dockerImage: "airbyte/destination-snowflake:0.4.58"
   spec:
     documentationUrl: "https://docs.airbyte.com/integrations/destinations/snowflake"
     connectionSpecification:
@@ -6335,6 +6335,9 @@
           - "accountname.snowflakecomputing.com"
           type: "string"
           title: "Host"
+          pattern: "^(http(s)?:\\/\\/)?([^./?#]+\\.)?([^./?#]+\\.)?([^./?#]+\\.)?([^./?#]+\\\
+            .snowflakecomputing\\.com)$"
+          pattern_descriptor: "{account_name}.snowflakecomputing.com or {accountname}.{aws_location}.aws.snowflakecomputing.com"
           order: 0
         role:
           description: "Enter the <a href=\"https://docs.snowflake.com/en/user-guide/security-access-control-overview.html#roles\"\
