make order with repository param in schemas
Signed-off-by: Sergey Chvalyuk <grubberr@gmail.com>

--- a/airbyte-integrations/connectors/source-github/source_github/schemas/project_cards.json
+++ b/airbyte-integrations/connectors/source-github/source_github/schemas/project_cards.json
@@ -35,13 +35,13 @@
       "type": ["null", "string"]
     },
     "repository": {
-      "type": ["null", "string"]
+      "type": "string"
     },
     "project_id": {
-      "type": ["null", "integer"]
+      "type": "integer"
     },
     "column_id": {
-      "type": ["null", "integer"]
+      "type": "integer"
     }
   }
 }
