--- a/airbyte-integrations/connectors/source-github/source_github/schemas/project_columns.json
+++ b/airbyte-integrations/connectors/source-github/source_github/schemas/project_columns.json
@@ -29,10 +29,10 @@
       "format": "date-time"
     },
     "repository": {
-      "type": ["null", "string"]
+      "type": "string"
     },
     "project_id": {
-      "type": ["null", "integer"]
+      "type": "integer"
     }
   }
 }
