--- a/airbyte-config/init/src/main/resources/seed/source_definitions.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_definitions.yaml
@@ -1237,6 +1237,14 @@
   icon: mixpanel.svg
   sourceType: api
   releaseStage: generally_available
+- name: Moengage
+  sourceDefinitionId: <TO BE ENTERED>
+  dockerRepository: airbyte/source-moengage
+  dockerImageTag: 0.1.0
+  documentationUrl: https://docs.airbyte.com/integrations/sources/moengage
+  icon: moengage.svg
+  sourceType: api
+  releaseStage: generally_available
 - name: Monday
   sourceDefinitionId: 80a54ea2-9959-4040-aac1-eee42423ec9b
   dockerRepository: airbyte/source-monday
