--- a/airbyte-integrations/connectors/source-twitter-wallet-mapping/source_twitter_wallet_mapping/schemas/twitter_wallet_mapping.json
+++ b/airbyte-integrations/connectors/source-twitter-wallet-mapping/source_twitter_wallet_mapping/schemas/twitter_wallet_mapping.json
@@ -2,6 +2,13 @@
   "$schema": "http://json-schema.org/draft-07/schema#",
   "type": "object",
   "properties": {
+    "campaign_id": {
+      "type": ["null", "string"]
+    },
+    "campaign_created_time": {
+      "type": ["null", "string"],
+      "format": "date-time"
+    },
     "submit_id": {
       "type": ["null", "string"]
     },
