source-amazon-ads: add default to auth_type

--- a/airbyte-integrations/connectors/source-amazon-ads/source_amazon_ads/spec.yaml
+++ b/airbyte-integrations/connectors/source-amazon-ads/source_amazon_ads/spec.yaml
@@ -69,6 +69,7 @@ connectionSpecification:
         auth_type:
           title: Auth Type
           const: oauth2.0
+          default: oauth2.0
           order: 0
           type: string
         client_id:
