Changing endpoint names

--- a/airbyte-integrations/connectors/source-emillenium/sample_files/configured_catalog.json
+++ b/airbyte-integrations/connectors/source-emillenium/sample_files/configured_catalog.json
@@ -2,7 +2,7 @@
     "streams": [
       {
         "stream": {
-          "name": "notas_fiscais",
+          "name": "listapedidos",
           "json_schema": {
             "$schema": "http://json-schema.org/draft-04/schema#",
             "type": "object",
