--- a/airbyte-ci/connectors/metadata_service/lib/metadata_service/models/src/ConnectorMetadataDefinitionV1.yaml
+++ b/airbyte-ci/connectors/metadata_service/lib/metadata_service/models/src/ConnectorMetadataDefinitionV1.yaml
@@ -24,7 +24,7 @@ properties:
       - license
       - supportUrl
       - githubIssueLabel
-      - connectionType
+      - connectorSubtype
       - releaseStage
     properties:
       name:
@@ -52,7 +52,7 @@ properties:
         format: uri
       githubIssueLabel:
         type: string
-      connectionType:
+      connectorSubtype:
         type: string
         enum:
           - api
