--- a/airbyte-ci/connectors/metadata_service/lib/tests/fixtures/invalid/metadata_missing_docker_image.yaml
+++ b/airbyte-ci/connectors/metadata_service/lib/tests/fixtures/invalid/metadata_missing_docker_image.yaml
@@ -6,7 +6,7 @@ data:
   githubIssueLabel: source-alloydb-strict-encrypt
   dockerRepository: airbyte/source-alloydb-strict-encrypt
   supportUrl: https://docs.airbyte.com/integrations/sources/alloydb
-  connectionType: database
+  connectorSubtype: database
   releaseStage: generally_available
   license: MIT
   allowedHosts:
