--- a/airbyte-integrations/bases/connector-acceptance-test/tools/acceptance_test_config_migration/requirements.txt
+++ b/airbyte-integrations/bases/connector-acceptance-test/tools/acceptance_test_config_migration/requirements.txt
@@ -49,11 +49,11 @@ PyYAML==5.4.1
 requests==2.28.1
 requests-cache==0.9.7
 requests-mock==1.9.3
-ruamel.yaml=0.17.21
+ruamel.yaml==0.17.21
 six==1.16.0
 smmap==5.0.0
 sortedcontainers==2.4.0
--e git+ssh://git@github.com/airbytehq/airbyte.git@70679775b55c5bb1be7384114155924772885be0#egg=connector_acceptance_test&subdirectory=airbyte-integrations/bases/connector-acceptance-test
+-e ../..  # local `connector-acceptance-test` module
 termcolor==2.1.0
 toml==0.10.2
 tomli==2.0.1
