Generate metadata files from catalog (#24336)
* Get list of source controlled github assets

* Get list of which connectors are not source controlled

* Check spec caching

* Add skeleton for conversion

* Update to use apply

* validate metadata properly

* Remove type defs for now

* Add tmp file manager

* Get file write working

* Filter out null metadata values

* Clean up code

* rename v0 to v1

* Add overrides

* Add missing release stages

* Clean up todos

* Rename sourceType to connectionType

* Ensure we are doing overrides in a deep fashion

* Move spec to service

* Add comments

* Fix tests

* Move is_spec_cached to a list

* Update tests

* Add metadata tests

* Use pydash

* run flake and black

* Hoist fixtures to shared file

* Add comment

* rename connectiontype to connectorSubType

--- a/airbyte-ci/connectors/metadata_service/lib/pyproject.toml
+++ b/airbyte-ci/connectors/metadata_service/lib/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "metadata_service"}]
 python = "^3.9"
 pydantic = "^1.10.6"
 click = "^8.1.3"
+google = "^3.0.0"
 
 
 [tool.poetry.group.test.dependencies]
@@ -23,7 +24,7 @@ datamodel-code-generator = "^0.17.1"
 validate_metadata_file = "metadata_service.validators.metadata_validator:validate_metadata_file"
 
 [tool.poe.tasks]
-generate-models = "datamodel-codegen --input metadata_service/models/src/ConnectorMetadataDefinitionV0.yaml --output metadata_service/models/generated/ConnectorMetadataDefinitionV0.py --use-title-as-name --disable-timestamp"
+generate-models = "datamodel-codegen --input metadata_service/models/src/ConnectorMetadataDefinitionV1.yaml --output metadata_service/models/generated/ConnectorMetadataDefinitionV1.py --use-title-as-name --disable-timestamp"
 
 [build-system]
 requires = ["poetry-core"]
