--- a/airbyte-ci/connectors/metadata_service/lib/metadata_service/models/src/CatalogOverrides.yaml
+++ b/airbyte-ci/connectors/metadata_service/lib/metadata_service/models/src/CatalogOverrides.yaml
@@ -26,7 +26,7 @@ properties:
   supportUrl:
     type: string
     format: uri
-  sourceType:
+  connectorSubtype:
     type: string
   allowedHosts:
     $ref: AllowedHosts.yaml
