--- a/airbyte-ci/connectors/metadata_service/lib/metadata_service/models/src/ConnectorMetadataDefinitionV1.yaml
+++ b/airbyte-ci/connectors/metadata_service/lib/metadata_service/models/src/ConnectorMetadataDefinitionV1.yaml
@@ -1,8 +1,8 @@
 ---
 "$schema": http://json-schema.org/draft-07/schema#
-"$id": https://github.com/airbytehq/airbyte/airbyte-ci/connectors_ci/metadata_service/lib/models/src/ConnectorMetadataDefinitionV0.yml
+"$id": https://github.com/airbytehq/airbyte/airbyte-ci/connectors_ci/metadata_service/lib/models/src/ConnectorMetadataDefinitionV1.yml
 
-title: ConnectorMetadataDefinitionV0
+title: ConnectorMetadataDefinitionV1
 description: describes the metadata of a connector
 type: object
 required:
@@ -16,6 +16,7 @@ properties:
     type: object
     required:
       - name
+      - icon
       - definitionId
       - connectorType
       - dockerRepository
@@ -23,7 +24,7 @@ properties:
       - license
       - supportUrl
       - githubIssueLabel
-      - sourceType
+      - connectorSubtype
       - releaseStage
     properties:
       name:
@@ -51,8 +52,14 @@ properties:
         format: uri
       githubIssueLabel:
         type: string
-      sourceType:
+      connectorSubtype:
         type: string
+        enum:
+          - api
+          - database
+          - file
+          - custom
+          - unknown
       releaseStage:
         type: string
         enum:
