--- a/airbyte-ci/connectors/metadata_service/orchestrator/pyproject.toml
+++ b/airbyte-ci/connectors/metadata_service/orchestrator/pyproject.toml
@@ -14,6 +14,11 @@ pandas = "^1.5.3"
 dagster-gcp = "^0.17.21"
 google = "^3.0.0"
 jinja2 = "^3.1.2"
+pygithub = "^1.58.0"
+metadata-service = {path = "../lib", develop = true}
+deepdiff = "^6.3.0"
+mergedeep = "^1.3.4"
+pydash = "^6.0.2"
 
 
 [tool.poetry.group.dev.dependencies]
