--- a/airbyte-integrations/connectors/source-hubspot/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-hubspot/acceptance-test-config.yml
@@ -17,6 +17,8 @@ acceptance_tests:
   discovery:
     tests:
     - config_path: secrets/config_oauth.json
+      backward_compatibility_tests_config:
+        disable_for_version: 0.3.3
   basic_read:
     tests:
     - config_path: secrets/config_oauth.json
