project_cards, releases improved
Signed-off-by: Sergey Chvalyuk <grubberr@gmail.com>

--- a/airbyte-integrations/connectors/source-github/source_github/schemas/project_cards.json
+++ b/airbyte-integrations/connectors/source-github/source_github/schemas/project_cards.json
@@ -34,6 +34,9 @@
     "column_url": {
       "type": ["null", "string"]
     },
+    "content_url": {
+      "type": ["null", "string"]
+    },
     "repository": {
       "type": "string"
     },
