--- a/airbyte-integrations/connectors/source-github/source_github/schemas/releases.json
+++ b/airbyte-integrations/connectors/source-github/source_github/schemas/releases.json
@@ -106,6 +106,21 @@
           }
         }
       }
+    },
+    "body_html": {
+      "type": ["null", "string"]
+    },
+    "body_text": {
+      "type": ["null", "string"]
+    },
+    "mentions_count": {
+      "type": ["null", "integer"]
+    },
+    "discussion_url": {
+      "type": ["null", "string"]
+    },
+    "reactions": {
+      "$ref": "reactions.json"
     }
   }
 }
