--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -11391,6 +11391,23 @@
     supportsNormalization: false
     supportsDBT: false
     supported_destination_sync_modes: []
+- dockerImage: "airbyte/source-pendo:0.1.0"
+  spec:
+    documentationUrl: "https://docs.airbyte.com/integrations/sources/pendo"
+    connectionSpecification:
+      $schema: "http://json-schema.org/draft-07/schema#"
+      type: "object"
+      required:
+      - "api_key"
+      properties:
+        api_key:
+          type: "string"
+          title: "API Key"
+          airbyte_secret: true
+      additionalProperties: true
+    supportsNormalization: false
+    supportsDBT: false
+    supported_destination_sync_modes: []
 - dockerImage: "airbyte/source-persistiq:0.1.0"
   spec:
     documentationUrl: "https://docs.airbyte.com/integrations/sources/persistiq"
