--- a/airbyte-integrations/connectors/source-meli-full/sample_files/config.json
+++ b/airbyte-integrations/connectors/source-meli-full/sample_files/config.json
@@ -1,6 +1,6 @@
 {
-    "refresh_token": "TG-634a74fea4cc56000107c8c0-1099729675",
-    "client_id": "6721621143889883",
-    "client_secret": "HlW5Kb4TRd4E8KytE3dWJuVMYXuZdEa4",
+    "refresh_token": "TG09729675",
+    "client_id": "67289883",
+    "client_secret": "H***********E3dWJuVMYXuZdEa4",
     "year_month": "202301"
 }
