--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -110,8 +110,6 @@ services:
       - MICRONAUT_ENVIRONMENTS=${WORKERS_MICRONAUT_ENVIRONMENTS}
       - APPLY_FIELD_SELECTION=${APPLY_FIELD_SELECTION}
       - FIELD_SELECTION_WORKSPACES=${FIELD_SELECTION_WORKSPACES}
-      - STRICT_COMPARISON_NORMALIZATION_WORKSPACES=${STRICT_COMPARISON_NORMALIZATION_WORKSPACES}
-      - STRICT_COMPARISON_NORMALIZATION_TAG=${STRICT_COMPARISON_NORMALIZATION_TAG}
     configs:
       - flags
     volumes:
@@ -249,6 +247,8 @@ services:
       - 80
     environment:
       - AIRBYTE_VERSION=${VERSION}
+      - CDK_VERSION=${CDK_VERSION}
+      - PYTHON_VERSION=${PYTHON_VERSION}
     networks:
       - airbyte_internal
     depends_on:
