--- a/docker-compose.debug.yaml
+++ b/docker-compose.debug.yaml
@@ -14,19 +14,19 @@ services:
     networks:
       - airbyte_internal
       - airbyte_public
-  airbyte-temporal-ui:
-    image: temporalio/web:1.13.0
-    logging: *default-logging
-    container_name: airbyte-temporal-ui
-    restart: unless-stopped
-    environment:
-      - TEMPORAL_GRPC_ENDPOINT=airbyte-temporal:7233
-      - TEMPORAL_PERMIT_WRITE_API=true
-    ports:
-      - 8012:8088
-    networks:
-      - airbyte_internal
-      - airbyte_public
+  # airbyte-temporal-ui:
+  #   image: temporalio/web:1.13.0
+  #   logging: *default-logging
+  #   container_name: airbyte-temporal-ui
+  #   restart: unless-stopped
+  #   environment:
+  #     - TEMPORAL_GRPC_ENDPOINT=airbyte-temporal:7233
+  #     - TEMPORAL_PERMIT_WRITE_API=true
+  #   ports:
+  #     - 8012:8088
+  #   networks:
+  #     - airbyte_internal
+  #     - airbyte_public
   worker:
     environment:
       - JAVA_TOOL_OPTIONS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5006
